@@ -16,10 +16,8 @@
 ########################################################################
  
 
-options=false
 logs=ALL
 logdir=/tmp
 traceLevel=3
-traceFilePath=/tmp/pegasus.trace
 port=8888
-traceComponents=XmlReader,Config
+traceComponents=ALL
