@@ -16,7 +16,6 @@
 ########################################################################
  
 
-options=false
 logs=ALL
 logdir=/tmp
 port=8888
