@@ -38,6 +38,8 @@
 #ifndef Pegasus_ConfigPropertyOwner_h
 #define Pegasus_ConfigPropertyOwner_h
 
+#define EMPTY_VALUE "set_empty"
+
 #include <Pegasus/Common/String.h>
 #include <Pegasus/Common/Config.h>
 #include <Pegasus/Config/ConfigExceptions.h>
