@@ -23,7 +23,7 @@
 //
 // Author: Nag Boranna (nagaraja_boranna@hp.com)
 //
-// Modified By:
+// Modified By: Yi Zhou (yi_zhou@hp.com)
 //
 //%/////////////////////////////////////////////////////////////////////////////
 
@@ -237,6 +237,11 @@ void DefaultPropertyOwner::updateCurrentValue(
     const String& name, 
     const String& value)
 {
+    if (String::equal(value, EMPTY_VALUE))
+    {
+            throw InvalidPropertyValue(name,value);
+    }
+
     //
     // make sure the property is dynamic before updating the value.
     //
@@ -261,6 +266,10 @@ void DefaultPropertyOwner::updatePlannedValue(
     const String& name, 
     const String& value)
 {
+    if (String::equal(value, EMPTY_VALUE))
+    {
+            throw InvalidPropertyValue(name,value);
+    }
     //
     // Since the validations done in initPlannedValue are sufficient and 
     // no additional validations required for update, we shall call 
