@@ -4,7 +4,8 @@ LIBRARIES = \
     $(LIB_DIR)/$(LIB_PREFIX)pegrepository$(LIB_SUFFIX) \
     $(LIB_DIR)/$(LIB_PREFIX)pegprotocol$(LIB_SUFFIX) \
     $(LIB_DIR)/$(LIB_PREFIX)pegserver$(LIB_SUFFIX) \
-    $(LIB_DIR)/$(LIB_PREFIX)pegprovider$(LIB_SUFFIX)
+    $(LIB_DIR)/$(LIB_PREFIX)pegprovider$(LIB_SUFFIX) \
+    $(LIB_DIR)/$(LIB_PREFIX)pegprovider2$(LIB_SUFFIX)
 
 ifeq ($(PEGASUS_PLATFORM),ZOS_ZSERIES_IBM)
 DYNAMIC_LIBRARIES = \
@@ -21,5 +22,6 @@ DYNAMIC_LIBRARIES = \
     -lpegrepository \
     -lpegprotocol \
     -lpegserver \
-    -lpegprovider
+    -lpegprovider \
+    -lpegprovider2
 endif
